WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
40259
[Qt] EventHandlerQt.cpp has coding-style errors
https://bugs.webkit.org/show_bug.cgi?id=40259
Summary
[Qt] EventHandlerQt.cpp has coding-style errors
Anders Bakken
Reported
2010-06-07 13:03:21 PDT
[Qt] EventHandlerQt.cpp has coding-style errors
Attachments
Patch
(1.67 KB, patch)
2010-06-07 13:03 PDT
,
Anders Bakken
no flags
Details
Formatted Diff
Diff
Patch
(1.67 KB, patch)
2010-06-08 10:37 PDT
,
Anders Bakken
no flags
Details
Formatted Diff
Diff
Patch
(1.68 KB, patch)
2010-06-08 10:55 PDT
,
Anders Bakken
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Anders Bakken
Comment 1
2010-06-07 13:03:59 PDT
Created
attachment 58077
[details]
Patch
Laszlo Gombos
Comment 2
2010-06-08 10:34:36 PDT
Comment on
attachment 58077
[details]
Patch Please remove "(OOPS!)" from the ChangeLog and perhaps mention why there is no new tests (e.g. "no new functionality" or "style change only"). Also I saw that you have quite a few changes up for review (with similar problems). I think you can combine some of these into a single patch (if all they do is style fixes for QtWebKit). Thanks.
Anders Bakken
Comment 3
2010-06-08 10:37:30 PDT
Created
attachment 58157
[details]
Patch
WebKit Review Bot
Comment 4
2010-06-08 10:41:16 PDT
Attachment 58157
[details]
did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style', '--no-squash']" exit_code: 1 WebCore/ChangeLog:8: Line contains tab character. [whitespace/tab] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Anders Bakken
Comment 5
2010-06-08 10:55:05 PDT
Created
attachment 58159
[details]
Patch
WebKit Commit Bot
Comment 6
2010-06-12 21:47:08 PDT
Comment on
attachment 58159
[details]
Patch Clearing flags on attachment: 58159 Committed
r61078
: <
http://trac.webkit.org/changeset/61078
>
WebKit Commit Bot
Comment 7
2010-06-12 21:47:12 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug