2010-06-12  Anders Bakken  <agbakken@gmail.com>

Reviewed by Eric Seidel.

        [Qt] EventHandlerQt.cpp has coding-style errors
        https://bugs.webkit.org/show_bug.cgi?id=40259

        Coding style change only.

        * page/qt/EventHandlerQt.cpp:
        (WebCore::EventHandler::eventActivatedView):

Canonical link: https://commits.webkit.org/52091@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@61078 268f45cc-cd09-0410-ab3c-d52691b4dbfc